--- a/index.html
+++ b/index.html
@@ -31,19 +31,14 @@
           <h1>From Play to Policy: <br> Conditional Behavior Generation from Uncurated Robot Data</h1>
         </div>
         <div class="col-3 hidden-sm"></div>
-        <div class="col-2 center">
+        <div class="col-3 center">
           <a style="text-decoration: none" href="https://openreview.net/forum?id=c7rM7F7jQjN">
             <h3 style="color: #F5A803">Paper</h3>
           </a>
         </div>
-        <div class="col-2 center">
-          <a style="text-decoration: none" href="">  <!-- add download -->
+        <div class="col-3 center">
+          <a style="text-decoration: none" href="./mfiles/cbet-code-anonymized.zip">
             <h3 style="color: #F5A803">Code</h3>
-          </a>
-        </div>
-        <div class="col-2 center">
-          <a style="text-decoration: none" href="">  <!-- add download -->
-            <h3 style="color: #F5A803">Data</h3>
           </a>
         </div>
       </div>
